k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vusta-idist-dev
  labels:
    name: vusta-idist-dev
    environment: production
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
